# GoogleTestSimple

./: CMakeLists.txt  README.md  mainTest.cpp
